--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "localforage": "^1.5.0",
     "moment": "^2.18.1",
     "pos": "^0.4.2",
+    "pusher-js": "^4.1.0",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-shallow-compare": "^15.6.0",
