Fixed some more typescript errors

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "webpack-error-notification": "^0.1.6"
   },
   "dependencies": {
+    "@types/request": "^2.0.0",
     "@types/underscore": "^1.8.1",
     "actioncable": "^5.1.1",
     "caniuse-db": "^1.0.30000693",
