--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@kadira/storybook": "^2.34.0",
     "@types/jest": "^20.0.2",
+    "@types/lodash": "^4.14.73",
     "@types/node": "^8.0.8",
     "@types/react": "^15.0.31",
     "@types/react-redux": "^4.4.45",
