--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 before_script:
   - cp config/database.yml.travis config/database.yml
   - bundle exec rake db:create
-  - bundle exec rake db:migrate
+  - bundle exec rake db:structure:load
   # use version 7 of node instead of whatever travis uses so jest actually works
   - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install 7.0.0
   - npm install  # Make use of 'postinstall' to run 'cd ./client npm install'
