--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
 rvm:
   - 2.3.1
 script:
-  - npm run jest && codecov
+  - npm run jest:silent && codecov
   - npm run build:test
   - npm run lint
   - bundle exec rake spec
