--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jest": "cd client && npm run jest",
     "jest:u": "cd client && npm run jest -- -u",
     "jest:watch": "cd client && npm run jest:watch",
-    "jest:coverage": "cd client && npm run jest:coverage"
+    "jest:coverage": "cd client && npm run jest:coverage",
+    "jest:silent": "cd client && npm run jest:silent"
   },
   "repository": {
     "type": "git",
