--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ script:
   - bundle exec teaspoon
 before_script:
   - cp config/database.yml.travis config/database.yml
+  # run redis instances and send them to the background
+  - redis-server &
+  - redis-server --port 7654 &
+  - redis-server --port 6378 &
   - bundle exec rake db:create
   - bundle exec rake db:structure:load
   # use version 7 of node instead of whatever travis uses so jest actually works
