Update Brakeman to run with exit code

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
   - npm run jest:silent && codecov
   - npm run build:test
   # - npm run lint
-  - bundle exec brakeman -q
+  - bundle exec brakeman -z
   - bundle exec rake spec
   - bundle exec teaspoon
 before_script:
