--- a/package.json
+++ b/package.json
@@ -101,7 +101,9 @@
     "draft-js-export-html": "^0.6.0",
     "draft-js-plugins-editor": "^2.0.0-beta1",
     "draft-js-richbuttons-plugin": "^2.1.0",
+    "es6-promise": "^4.1.1",
     "eslint-plugin-jsx-a11y": "^3.0.1",
+    "fetch-ie8": "^1.5.0",
     "font-awesome": "^4.7.0",
     "fuse.js": "^3.0.5",
     "fuzzyset.js": "0.0.3",
