--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Shared Quill logic for grading and contextualizing student writing.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "test": "mocha --opts mocha.opts",
     "test:watch": "mocha --opts mocha.opts --watch --reporter dot",
     "test:singular": "mocha --compilers js:babel-register $FILE --watch --reporter dot"
@@ -18,5 +17,24 @@
   "bugs": {
     "url": "https://github.com/empirical-org/quill-shared-modules/issues"
   },
-  "homepage": "https://github.com/empirical-org/quill-shared-modules#readme"
+  "homepage": "https://github.com/empirical-org/quill-shared-modules#readme",
+  "devDependencies": {
+    "assets-webpack-plugin": "^3.5.0",
+    "awesome-typescript-loader": "^3.1.3",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "=19.0.0",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "mocha": "^3.2.0",
+    "webpack": "^3.0.0",
+    "webpack-bundle-analyzer": "^2.8.3",
+    "webpack-dev-server": "^1.14.0"
+  }
 }
