--- a/package.json
+++ b/package.json
@@ -32,9 +32,20 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
+    "expect": "^1.13.4",
     "mocha": "^3.2.0",
+    "typescript": "^2.4.1",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.3",
     "webpack-dev-server": "^1.14.0"
+  },
+  "dependencies": {
+    "@types/underscore": "^1.8.1",
+    "diff": "^3.2.0",
+    "fuzzyset.js": "0.0.3",
+    "levenshtein": "^1.0.5",
+    "lodash": "^4.17.4",
+    "pos": "^0.4.2",
+    "underscore": "^1.8.3"
   }
 }
