--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/underscore": "^1.8.1",
     "diff": "^3.2.0",
     "fuzzyset.js": "0.0.3",
+    "immutable": "^3.8.2",
     "levenshtein": "^1.0.5",
     "lodash": "^4.17.4",
     "pos": "^0.4.2",
