--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Shared Quill logic for grading and contextualizing student writing.",
   "main": "src/index.js",
   "scripts": {
+    "temp": "./cov.sh",
+    "codecov": "NODE_ENV=test YOURPACKAGE_COVERAGE=1 mocha --opts mocha.opts --require blanket --reporter mocha-lcov-reporter; codecov --token=6ff848fa-52df-4bd9-ac0d-e0058d35d660",
     "test": "mocha --opts mocha.opts",
     "test:watch": "mocha --opts mocha.opts --watch --reporter dot",
     "test:singular": "mocha --compilers js:babel-register $FILE --watch --reporter dot",
@@ -33,8 +35,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
+    "blanket": "^1.2.3",
     "expect": "^1.13.4",
+    "jscover": "^1.0.0",
     "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "typescript": "^2.4.1",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.3",
@@ -49,5 +54,16 @@
     "lodash": "^4.17.4",
     "pos": "^0.4.2",
     "underscore": "^1.8.3"
+  },
+  "config": {
+    "blanket": {
+      "pattern": [
+        ""
+      ],
+      "data-cover-never": [
+        "node_modules",
+        "test"
+      ]
+    }
   }
 }
