--- a/client/package.json
+++ b/client/package.json
@@ -44,9 +44,11 @@
     "pusher-js": "^4.0.0",
     "react": "^15.2.0",
     "react-addons-css-transition-group": "^15.2.0",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-addons-update": "^15.2.1",
     "react-bootstrap": "^0.30.0",
     "react-datepicker": "^0.40.0",
+    "react-dates": "^13.0.6",
     "react-dom": "^15.2.1",
     "react-markdown": "^2.4.6",
     "react-on-rails": "=6.5.0",
