--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,12 @@ cache:
 rvm:
   - 2.3.1
 script:
-  - npm run jest:silent && codecov
+  - npm run jest:silent
+  - bash <(curl -s https://codecov.io/bash) -cF javascript
   - npm run build:test
   # - npm run lint
   - bundle exec rake spec
+  - bash <(curl -s https://codecov.io/bash) -cF ruby
   - bundle exec teaspoon
 before_script:
   - cp config/database.yml.travis config/database.yml
