--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - npm run build:test
   # - npm run lint
   - bundle exec rake spec
-  - bundle exec rake brakeman
+  - bundle exec brakeman
   - bundle exec teaspoon
 before_script:
   - cp config/database.yml.travis config/database.yml
