--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ rvm:
   - 2.3.1
 script:
   - npm run jest:silent
-  - bash <(curl -s https://codecov.io/bash) -cF javascript
+  - bash <(curl -s https://codecov.io/bash) -cF jest
   - npm run build:test
   # - npm run lint
   - bundle exec rake spec
-  - bash <(curl -s https://codecov.io/bash) -cF ruby
+  - bash <(curl -s https://codecov.io/bash) -cF rspec
   - bundle exec teaspoon
 before_script:
   - cp config/database.yml.travis config/database.yml
