tell travis where to look for coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ rvm:
   - 2.3.1
 script:
   - npm run jest:silent
-  - bash <(curl -s https://codecov.io/bash) -cF jest
+  - cd ..
+  - bash <(curl -s https://codecov.io/bash) -c -F jest -f client/coverage/coverage-final.json
   - npm run build:test
   # - npm run lint
   - bundle exec rake spec
-  - bash <(curl -s https://codecov.io/bash) -cF rspec
+  - bash <(curl -s https://codecov.io/bash) -c -F rspec -f coverage/.resultset.json
   - bundle exec teaspoon
 before_script:
   - cp config/database.yml.travis config/database.yml
