--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ cache:
 rvm:
   - 2.3.1
 script:
-  # - npm run jest:silent
-  # - bash <(curl -s https://codecov.io/bash) -cF jest
+  - npm run jest:silent
+  - bash <(curl -s https://codecov.io/bash) -cF jest
   - npm run build:test
   # - npm run lint
   - bundle exec rake spec
