--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-starter",
   "version": "1.0.0",
   "description": "```\r npm init -f\r ```",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
