--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.3",
+    "quill-string-normalizer": "0.0.3",
     "react-hot-loader": "^1.3.1",
     "react-radio-group": "^3.0.1",
     "react-remarkable": "^1.1.1",
@@ -112,6 +113,7 @@
     "localforage": "^1.5.0",
     "moment": "^2.18.1",
     "pos": "^0.4.2",
+    "promise-polyfill": "^6.0.2",
     "pusher-js": "^4.1.0",
     "raven-js": "^3.17.0",
     "react": "^15.6.1",
