--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "url": "https://github.com/shakacode/react_on_rails/issues"
   },
   "dependencies": {
+    "gitbook-plugin-rss": "^3.0.2",
     "tabslet": "^1.7.3"
   },
   "devDependencies": {
