--- a/client/package.json
+++ b/client/package.json
@@ -127,7 +127,9 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.js"
     },
-    "collectCoverageFrom" : ["app/**/*.{js,jsx}"]
+    "collectCoverageFrom": [
+      "app/**/*.{js,jsx}"
+    ]
   },
   "author": "Empirical",
   "license": "ISC"
