--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-webpack": "^2.0.3",
     "mocha": "^3.2.0",
+    "phantomjs-polyfill-object-assign": "0.0.2",
     "rollup": "^0.41.4",
     "rollup-plugin-typescript": "^0.8.1",
     "style-loader": "^0.16.1",
